Fix price doesn't show when lore == null